# RaptorGate

./: .config_mockup.txt  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  api.json  app_config.json  build.rs  build.sh  commitlint.config.js  dns_inspection_config.json  docker-compose-backend.yml  docker-compose.yml  ips_config.json  nat_config.json  package-lock.json  package.json  policies.json  zone_pairs.json  zones.json
.github/: pull_request_template.md
.github/workflows/: commitlint.yml
backend/: .env.example  biome.json  drizzle.config.ts  package.json  rules.json  seed.ts
backend/devCerts/: cert.pem  key.pem
backend/scripts/: generate-proto.ts  proto-generate.ts  seed-json-db.ts
backend/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  main.ts
backend/test/: app.e2e-spec.ts  jest-e2e.json
crates/: AGENTS.md
crates/raptorgate/: Cargo.toml  build.rs
crates/raptorgate_derive/: Cargo.toml
docker/backend/: Dockerfile  dockerfile
docker/firewall/: dockerfile
docker/frontend/: dockerfile
docs/: CONVENTIONS.md  plan-implementacji-firewall-backend.md  rgipc-rgpf-spec.md  ssl-inspection-manual-test.md
docs/adr/: 0003-identity-session-lifecycle.md
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/tmp/: config-control.css  config-control.html  config-control.js  config-diff.css  config-diff.html  config-diff.js  connections.css  connections.html  connections.js  nat-rules.html  users.html  zone-pairs.html  zones.html
ml_pipeline/: .gitignore  pyproject.toml
ml_pipeline/data/models/: raptorgate-cicids2017-v4-focal.onnx  raptorgate-cicids2017-v4-focal.onnx.data  raptorgate-cicids2017-v4-focal.onnx.json
ml_pipeline/src/raptorgate_ml/: __init__.py  cli.py  datasets.py  dpi.py  enums.py  extractors.py  feature_vector.py  flow_stats.py  labeling.py  ml_model.py  pcap_reader.py  pipeline.py
ml_pipeline/tests/: test_datasets.py  test_enums.py  test_extractors.py  test_feature_vector.py  test_flow_stats.py  test_ml_model.py  test_pipeline_smoke.py
proto/: raptorgate.proto
proto/common/: common.proto
proto/config/: config_grpc_service.proto  config_grpc_service.proto.bak  config_models.proto  config_service.proto
proto/control/: validation_service.proto
src/: AGENTS.md  app_config.rs  config.rs  control_plane.rs  disk_store.rs  events.rs  frame.rs  grpc_client.rs  ip_defrag.rs  lib.rs  main.rs  packet_validator.rs  pipeline.rs  policy.rs  policy_evaluator.rs  proto.rs  query_server.rs  rule_tree.rs
src/data_plane/: mod.rs  (+8 more)
test-env/: .gitignore  AGENTS.md  README.md  package.json  run.sh  tsconfig.json
tests/: test_query_server.rs  test_raptorlang.rs
vagrant/: .gitignore  deploy.sh  vagrantfile
(+1019 files in other folders)
