[package]
name = "ngfw"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = {version =  "2.1.1", features = ["full"] }
etherparse = "0.19.0"
nonempty = "0.12.0"
pcap = "2.4.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tun = {version = "0.8.5", features = ["async"] }
time = { version = "0.3.47", features = ["serde"] }
prost-types = "0.14.3"
uuid = { version = "1.22.0", features = ["v7"] }
tracing = "0.1"
anyhow = "1.0.102"
dotenvy = "0.15"
serde_json = "1.0.149"
arc-swap = "1.8.2"
tokio-util = "0.7"
paste = "1.0.15"
visibility = "0.1.1"
tracing-subscriber = "0.3.23"
rcgen = { version = "0.13", features = ["pem"] }
ring = "0.17"
bytes = "1.11.1"
nix = { version = "0.31.2", features = ["net"] }
