[project]
name = "raptorgate-ml"
version = "0.1.0"
description = "RaptorGate ML training data pipeline: PCAP -> 38-feature vector -> Parquet."
requires-python = ">=3.12"
dependencies = [
    "scapy>=2.5",
    "polars>=1.0",
    "pyarrow>=16",
    "numpy>=1.26",
    "click>=8.1",
    "tqdm>=4.66",
    "requests>=2.31",
    "torch>=2.4",
    "onnx>=1.16",
    "onnxscript>=0.4",
]

[project.scripts]
raptorgate-ml = "raptorgate_ml.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raptorgate_ml"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
